--- a/财新网/财新网使用辱华素材做封面.md
+++ b/财新网/财新网使用辱华素材做封面.md
@@ -9,11 +9,11 @@
 ![财新周刊第896期封面图](https://github.com/CNTraitors/Treason-media/blob/master/%E8%B4%A2%E6%96%B0%E7%BD%91/%E5%9B%BE%E7%89%87/%E8%B4%A2%E6%96%B0%E5%91%A8%E5%88%8A%E7%AC%AC896%E6%9C%9F%E5%B0%81%E9%9D%A2%E5%9B%BE.gif)
 
 #### 图3. Md. Zakir Mahmud 主页
-- ![Md. Zakir Mahmud 主页](https://github.com/CNTraitors/Treason-media/blob/master/%E8%B4%A2%E6%96%B0%E7%BD%91/%E5%9B%BE%E7%89%87/Md.%20Zakir%20Mahmud%E4%B8%BB%E9%A1%B5.png)
+![Md. Zakir Mahmud 主页](https://github.com/CNTraitors/Treason-media/blob/master/%E8%B4%A2%E6%96%B0%E7%BD%91/%E5%9B%BE%E7%89%87/Md.%20Zakir%20Mahmud%E4%B8%BB%E9%A1%B5.png)
 
 #### 图4. Md. Zakir Mahmud 辱华素材1
-- ![Md. Zakir Mahmud 辱华素材1](https://github.com/CNTraitors/Treason-media/blob/master/%E8%B4%A2%E6%96%B0%E7%BD%91/%E5%9B%BE%E7%89%87/%E8%BE%B1%E5%8D%8E%E7%B4%A0%E6%9D%901.png)
+![Md. Zakir Mahmud 辱华素材1](https://github.com/CNTraitors/Treason-media/blob/master/%E8%B4%A2%E6%96%B0%E7%BD%91/%E5%9B%BE%E7%89%87/%E8%BE%B1%E5%8D%8E%E7%B4%A0%E6%9D%901.png)
 
 #### 图5. Md. Zakir Mahmud 辱华素材2
-- ![Md. Zakir Mahmud 辱华素材2](https://github.com/CNTraitors/Treason-media/blob/master/%E8%B4%A2%E6%96%B0%E7%BD%91/%E5%9B%BE%E7%89%87/%E8%BE%B1%E5%8D%8E%E7%B4%A0%E6%9D%902.png)
+![Md. Zakir Mahmud 辱华素材2](https://github.com/CNTraitors/Treason-media/blob/master/%E8%B4%A2%E6%96%B0%E7%BD%91/%E5%9B%BE%E7%89%87/%E8%BE%B1%E5%8D%8E%E7%B4%A0%E6%9D%902.png)
 
